On RANDOM answer, make type different than question type